--- a/issues/1285/general.yaml
+++ b/issues/1285/general.yaml
@@ -1,1 +1,99 @@
-messages: []
+messages:
+  - extra_links:
+      - M1400_ICC
+      - BUREAUFAX
+      - ROA
+    type: running_annexes
+  - type: approved_recommendations
+    items:
+      'F.742.2 ': 2023-12-31T23:00:00.000Z
+      'F.748.27 ': 2023-12-31T23:00:00.000Z
+      'F.749.8 ': 2023-12-31T23:00:00.000Z
+      'F.780.5 ': 2023-12-31T23:00:00.000Z
+      'G.650.1 ': 2023-12-31T23:00:00.000Z
+      'G.698.5 ': 2023-12-31T23:00:00.000Z
+      'G.698.6 ': 2023-12-31T23:00:00.000Z
+      'G.781 ': 2023-12-31T23:00:00.000Z
+      'G.876 (2021) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.959.1 ': 2023-12-31T23:00:00.000Z
+      'G.8013/Y.1731 (2023) Cor. 1 ': 2023-12-31T23:00:00.000Z
+      G.8021/Y.1341 (2022) Amd. 1: 2023-12-31T23:00:00.000Z
+      'G.8023 (2018) Amd. 2 ': 2023-12-31T23:00:00.000Z
+      'G.8051/Y.1345 (2020) Cor. 1 ': 2023-12-31T23:00:00.000Z
+      'G.8052 ': 2023-12-31T23:00:00.000Z
+      'G.8121/Y.1381 (2018) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.8151/Y.1374 (2020) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.8152 ': 2023-12-31T23:00:00.000Z
+      'G.8260 (2022) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.8264/Y.1364 (2017) Amd. ': 2023-12-31T23:00:00.000Z
+      'G.8271.1/Y.1366.1 (2022) Amd. ': 2023-12-31T23:00:00.000Z
+      'G.8272.1 ': 2023-12-31T23:00:00.000Z
+      'G.8272.2 ': 2023-12-31T23:00:00.000Z
+      G.8275: 2023-12-31T23:00:00.000Z
+      'G.8275.1/Y.1369.1 (2022) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.8275.2/Y.1369.2 (2022) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.8312 (2020) Amd. ': 2023-12-31T23:00:00.000Z
+      'G.8350 (2022) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.9804.1 (2019) Amd. 2 ': 2023-12-31T23:00:00.000Z
+      'G.9806 (2020) Amd. 3 ': 2023-12-31T23:00:00.000Z
+      'G.9960 (2023) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'G.9961 (2023) Amd. 1 ': 2023-12-31T23:00:00.000Z
+      'H.431.1 ': 2023-12-31T23:00:00.000Z
+      'H.861.0 (V2) ': 2023-12-31T23:00:00.000Z
+      'H.862.7 ': 2023-12-31T23:00:00.000Z
+      'J.1 ': 2023-12-31T23:00:00.000Z
+      'J.198.2 ': 2023-12-31T23:00:00.000Z
+      'J.198.3 ': 2023-12-31T23:00:00.000Z
+      'J.1206 ': 2023-12-31T23:00:00.000Z
+      'K.37 ': 2023-12-31T23:00:00.000Z
+      'K.38 ': 2023-12-31T23:00:00.000Z
+      'K.83 ': 2023-12-31T23:00:00.000Z
+      'K.91 ': 2023-12-31T23:00:00.000Z
+      'K.154 ': 2023-12-31T23:00:00.000Z
+      'L.100 ': 2023-12-31T23:00:00.000Z
+      'L.109 ': 2023-12-31T23:00:00.000Z
+      'L.250 ': 2023-12-31T23:00:00.000Z
+      'L.312 ': 2023-12-31T23:00:00.000Z
+      'L.1362 ': 2023-12-31T23:00:00.000Z
+      'L.1391 ': 2023-12-31T23:00:00.000Z
+      'L.1508 ': 2023-12-31T23:00:00.000Z
+      'M.3173.1 ': 2023-12-31T23:00:00.000Z
+      'M.3386 ': 2023-12-31T23:00:00.000Z
+      'Y.2344 ': 2023-12-31T23:00:00.000Z
+    by: AAP-43
+    procedures: Recommendation ITU-T A.8
+  - type: service_restrictions
+    items:
+      - country:
+          en: Seychelles
+        ob: 1006
+        page: 13
+      - country:
+          en: Slovakia
+        ob: 1007
+        page: 12
+      - country:
+          en: Malaysia
+        ob: 1013
+        page: 5
+      - country:
+          en: Thailand
+        ob: 1034
+        page: 5
+      - country:
+          en: São Tomé and Principe
+        ob: 1039
+        page: 14
+      - country:
+          en: Uruguay
+        ob: 1039
+        page: 14
+      - country:
+          en: 'Hong Kong, China'
+        ob: 1068
+        page: 4
+      - country:
+          en: Ukraine
+        ob: 1148
+        page: 5
+  - type: callback_procedures
